<resources>
    <string name="app_name">GameCalc</string>
    <string name="title_activity_memory_">Memory_Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_setting">activity_setting</string>
    <!--MemoryActivity-->
    <string name="found_game">Found Game</string>
    <string name="card">Card</string>
    <string name="arrow">Arrow</string>
    <string name="block">Block</string>
    <string name="draw">Draw</string>
    <string name="high_score">High Score</string>
    <!--SettingActivity-->
    <string name="assist">Calculation Assist</string>
    <string name="assist_text_color">Assist Text Color</string>

    <string name="main_color">Main Color</string>
    <string name="screen_color">Screen Color</string>
    <string name="calculation_text_color">Calculator Text Color</string>
    <string name="sound">Sound</string>
    <string name="button_color">Button Color</string>
    <string name="button_text_color">Button Text Color</string>
    <!--Calculation-->
    <string name="pass_error">Password is invalid</string>
    <string name="saved">Setting was saved</string>
    <string name="playing_game">Playing Game!</string>
    <!--adMob-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <!--Test:ca-app-pub-3940256099942544/6300978111-->
    <!--apple-->
    <string name="through_cnt">dodged count:</string>
    <!--draw-->
    <string name="thickness">thickness</string>
    <string name="color">Color:</string>
    <string name="dotted">dotted:</string>
    <string name="black">black</string>
    <string name="dark_gray">dark gray</string>
    <string name="light_gray">light gray</string>
    <string name="yellow">yellow</string>
    <string name="orange">orange</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="pink">pink</string>
    <string name="random">random</string>
    <string name="eraser">eraser</string>
    <string name="dotOn">ON</string>
    <string name="dotOff">OFF</string>
    <string name="fill">Fill in the canvas</string>
    <string name="exit">Will close an Draw</string>
    <string name="title_activity_memory">memory</string>
    <!--space-->
    <string name="attack">ATTACK</string>
    <string name="BULLET">BULLET</string>
    <string name="speed">SPEED</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_setting">setting</string>

</resources>